# ts-protoc-gen

./: WORKSPACE  defs.bzl  package-lock.json  package.json  tsconfig.json
src/: BUILD.bazel  index.ts
src/bazel/: BUILD.bazel
src/service/: grpcnode.ts
test/bazel/: BUILD.bazel
