package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = glob([
        "*.ts",
        "service/*.ts",
        "ts/*.ts",
    ]),
    # node_modules = "@ts_protoc_gen_deps//:node_modules",
    tsconfig = "@ts_protoc_gen//:tsconfig.json",
    deps = [
        "@npm//google-protobuf",
        "@npm//@types/google-protobuf",
        "@npm//@types/node",
    ],
)
